<resources>
    <string name="app_name">FarmTrac</string>

    <string name="new_entry">New Entry</string>
    <string name="name">Name</string>
    <string name="work">Work</string>
    <string name="points">Points</string>
    <string name="submit">Submit</string>
    <string name="balance">Balance</string>
    <string name="balanceAmount">Balance</string>
    <string name="pointPrice">Point price</string>
    <string name="history">History</string>
    <string name="next">Next</string>
    <string name="amount">Amount</string>
    <string name="preference_file_key">com.yourapp.farmtrac.PREFERENCE_FILE_KEY</string>
    <string name="first_time">firstTime</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="english">English</string>
    <string name="tamil">Tamil</string>
    <string name="basic">Basic</string>
    <string name="additional">Additional</string>
    <string name="greeting">Thanks for using our App 😃</string>
    <string name="settings">Settings</string>
    <string name="date">Date</string>
    <string name="history_detail">History Detail</string>
    <string name="balance_detail">Balance Detail</string>
    <string name="pay">Paid</string>
    <string name="pay_now">Pay Now</string>
    <string name="or">Or</string>
    <string name="ok">Ok</string>
    <string name="sampleText">Sample Text</string>
    <string name="paid">Paid</string>
    <string name="mailText">Email</string>
    <string name="mail">keerthik97117@gmail.com</string>
    <string name="contactText">Contact</string>
    <string name="contact">9790307426</string>
    <string name="submitted">Details submitted</string>
    <string name="update_message">Update Available</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="no_balance">No Balance Amounts</string>
    <string name="no_record">No Records</string>
    <string name="invalid_point_price">Point price should be in Numbers</string>
    <string name="invalid_point">Points should be greater than 0</string>
    <string name="invalid_amount">Amount should be greater than 0</string>
</resources>